--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -1,15 +1,20 @@
-<mat-card class="profile-card">
-    <div class="profile-header">
-        <img [height]="100" [width]="100" alt="" class="avatar-image" ngSrc="{{player().avatarUrl}}"/>
-        <div class="profile-name">
-            {{ player().pseudo }}
-        </div>
-    </div>
-
-    <div class="game-trophies-summary">
-        <div class="total-played-games"><b>{{ totalGamesPlayed() | number }}</b> played games</div>
-        <div class="total-earned-trophies"><b>{{ totalEarnedTrophies() | number }}</b> earned trophies</div>
-        <app-trophy-count-displayer [iconSizePx]="50" [labelOrientation]="'vertical'" [textSizePx]="18"
-                                    [trophyCount]="trophyCount()" class="trophy-count"/>
-    </div>
-</mat-card>
+@if (player()) {
+    <app-trophyquest-block class="profile-summary">
+        <ng-template appBlockHeader>
+            <div class="summary-header">
+                <img [height]="100" [width]="100" alt="" class="avatar-image" ngSrc="{{player().avatarUrl}}"/>
+                <div class="player-pseudo">{{ player().pseudo }}</div>
+            </div>
+        </ng-template>
+        <ng-template appBlockContent>
+            <div class="summary-content">
+                <div class="counts">
+                    <div class="summary-count"><b>{{ totalGamesPlayed() | number }}</b> played games</div>
+                    <div class="summary-count"><b>{{ totalEarnedTrophies() | number }}</b> earned trophies</div>
+                </div>
+                <app-trophy-count-displayer [iconSizePx]="32" [labelOrientation]="'vertical'" [textSizePx]="14"
+                                            [trophyCount]="trophyCount()" class="trophy-count"/>
+            </div>
+        </ng-template>
+    </app-trophyquest-block>
+}
