--- a/src/app/components/trophyquest-block/trophyquest-block.component.scss
+++ b/src/app/components/trophyquest-block/trophyquest-block.component.scss
@@ -6,6 +6,7 @@
   gap: 20px;
   align-items: stretch;
   padding: 20px;
+  width: 100%;
 
   border-radius: 10px;
   border: 2px solid $tq-blue-darker;
