Minor style fixes in home and profile pages

--- a/src/app/components/home-game-card/home-game-card.component.html
+++ b/src/app/components/home-game-card/home-game-card.component.html
@@ -1,6 +1,6 @@
 <div class="home-game-card">
     <div class="game-infos">
-        <img [alt]="game().title" [height]="50" [ngSrc]="game().imageUrl" class="game-image" [width]="50"/>
+        <img alt="" [src]="game().imageUrl" class="game-image"/>
         <div class="game-title">{{ game().title }}</div>
     </div>
     <div class="players">
