--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -27,8 +27,20 @@
     width: 80%;
   }
 
+  .separator {
+    color: $tq-blue-medium;
+    margin: 2px;
+  }
+
   .home-game-card {
     width: 100%;
+  }
+
+  .most-active-players {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
 }
