--- a/src/app/components/profile-trophy-card/profile-trophy-card.component.scss
+++ b/src/app/components/profile-trophy-card/profile-trophy-card.component.scss
@@ -1,10 +1,6 @@
 @use "styles/colors" as *;
 
 .profile-trophy-card {
-  border: 1px solid transparent;
-  border-radius: 0.75rem;
-  background-color: $tq-blue-lighter;
-  padding: 0.5rem 0.75rem;
   cursor: pointer;
 
   .trophy-header {
@@ -18,6 +14,10 @@
     align-items: center;
   }
 
+  .trophy-image {
+    border-radius: 5px;
+  }
+
   .trophy-title-and-game-title {
     margin-left: 10px;
     display: flex;
@@ -27,7 +27,7 @@
 
   .trophy-title {
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 14px;
   }
 
   .trophy-game-title {
