--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -41,9 +41,16 @@
     width: 100%;
   }
 
+  .separator-wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
   .separator {
     color: $tq-blue-medium;
-    margin: 2px;
+    margin: 3px;
     width: 95%;
   }
 
@@ -52,6 +59,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2px;
   }
 
   .profile-trophy-card {
