--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -4,6 +4,8 @@
                            [errorMessage]="'Failed to load profile information'"/>
     } @else {
         @if (isLoadingSummary()) {
+            <mat-spinner/>
+        } @else {
             <app-profile-summary class="summary" [player]="player()" [style.animationDelay.ms]="100"
                                  [totalEarnedTrophies]="totalEarnedTrophies()"
                                  [totalGamesPlayed]="totalPlayedGames()"
