--- a/src/app/components/profile-trophy-card/profile-trophy-card.component.html
+++ b/src/app/components/profile-trophy-card/profile-trophy-card.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     @if (isExpanded) {
-        <div class="trophy-content">
+        <div class="trophy-description-wrapper">
             <div class="trophy-description">{{ trophy().trophyDescription }}</div>
         </div>
     }
