--- a/src/app/components/profile-trophy-card/profile-trophy-card.component.scss
+++ b/src/app/components/profile-trophy-card/profile-trophy-card.component.scss
@@ -2,8 +2,13 @@
 
 .profile-trophy-card {
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 
   .trophy-header {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,6 +48,18 @@
 
   .trophy-earned-date {
     font-size: 0.6rem;
+    color: rgb(0, 0, 0, 0.54);
+  }
+
+  .trophy-description-wrapper {
+    min-height: 30px;
+    width: 90%;
+  }
+
+  .trophy-description {
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 300;
     color: rgb(0, 0, 0, 0.54);
   }
 
